<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Sport à Clermont</string>
    <string name="search" translatable="false">Chercher</string>
    <string name="action_example" translatable="false">Site de l\'OMS</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="accueil" translatable="false">Accueil</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="info_image" translatable="false">Logo de l\'OMS</string>
    <string name="ma_position" translatable="false">Geoposition</string>
    <string name="actualite" translatable="false">Actualités</string>
    <string name="provider_enabled" translatable="false">The provider %s is now enabled</string>
    <string name="provider_disabled" translatable="false">The provider %s is now disabled</string>
    <string name="provider_new_status" translatable="false">The provider %1$s has now a new status %2$s</string>
    <string name="new_location" translatable="false">New Location : Latitude = %1$s, Longitude = %2$s, Altitude = %3$s avec une précision de %4$s mètres </string>
    <string name="association" translatable="false">Les associations</string>
    <string name="equipement" translatable="false">Les equipements</string>
    <string name="quartier" translatable="false">Les quartiers</string>
    <string name="discipline" translatable="false">Les disciplines</string>
    <string name="localise_association" translatable="false">Localiser associations</string>
    <string name="localise_equipement" translatable="false">Localiser equipements</string>
    <string name="localise_discipline" translatable="false">Localiser disciplines</string>
    <string name="info_icone" translatable="false">Information sur l\'OMS</string>
    <string name="titre_info" translatable="false">Autres Informations</string>
    <string name="guide_sport" translatable="false"><u>Guide des sports</u></string>
    <string name="plan_oms" translatable="false"><u>Plan OMS</u></string>
    <string name="oms" translatable="false"><u>OMS</u></string>
    <string name="lien_guide_sport" translatable="false">http://fr.calameo.com/read/00122036544c76167c62c</string>
    <string name="lien_plan_OMS" translatable="false">http://www.oms-clermont-ferrand.fr/plan-oms</string>
    <string name="adherents" translatable="false">Adhérents ?</string>
    <string name="non_adherents" translatable="false">Non Adhérents ?</string>
    <string name="fleche" translatable="false">></string>
    <string name="titreSportDialog" translatable="false">Sports concernant la discipline :</string>
    <string name="Sync" translatable="false">Synchroniser les données</string>
    <string name="annuaire" translatable="false">Annuaire</string>
    <string name="logo_adherent" translatable="false">adherent OMS</string>
    <string name="detailCo" translatable="false">Pas de connexion Internet !</string>
    <string name="goMap" translatable="false">- Voir les dix plus proches sur la carte -</string>
    <string name="info_assoc_site" translatable="false"><u>Plus d\'informations sur le site</u></string>
    <string name="pasAdherent" translatable="false">Cette association ne nous à pas communiqué ses informations. \n Prenez contact avec l\'OMS pour plus de renseignements.</string>
    <string name="lienSite" translatable="false">http://www.oms-clermont-ferrand.fr/</string>
    <string name="contactNonDispo" translatable="false">Aucun contact disponible</string>
    <string name="equipementNonDispo" translatable="false">Aucun equipement disponible</string>
    <string name="agenda" translatable="false">Agenda</string>
    <string name="titreDetailAssociation" translatable="false">Détail de l\'association</string>
    <string name="titreDetailEquipement" translatable="false">Détail de l\'équipement</string>
    <string name="titreDetailActualite" translatable="false">Détail de l\'actualité</string>
    <string name="titreDetailEvenement" translatable="false">Détail de l\'événement</string>
    <string name="titreDetailDiscipline" translatable="false">Détail de la discipline</string>
    <string name="goSite" translatable="false"><u>Plus d\'informations : Site Internet OMS</u></string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="lien_site_OMS" translatable="false">http://www.oms-clermont-ferrand.fr/</string>
    <string name="evenements" translatable="false">Evènements</string>
    <string name="adresse" translatable="false">Adresse</string>
    <string name="geolocalisation" translatable="false">Géolocalisation</string>
    <string name="accueil_underline" translatable="false"><u>Accueil</u></string>
    <string name="annuaire_underline" translatable="false"><u>Annuaire</u></string>
    <string name="agenda_underline" translatable="false"><u>Agenda</u></string>
    <string name="telephone" translatable="false">Telephone</string>
    <string name="location" translatable="false">Localisation</string>
    <string name="associationPratiquantes" translatable="false">Les associations utilisatrices</string>
    <string name="geolocalisation_underline" translatable="false"><u>Géolocalisation</u></string>
    <string name="pasAssocEquipement" translatable="false">Aucune association présente sur cet équipement</string>
    <string name="chargementFichier" translatable="false">Chargement des fichiers</string>
    <string name="Recuperation_donnees" translatable="false">Recuperation des données</string>
    <string name="recherche_assoc" translatable="false">Rechercher une association</string>
    <string name="recherche_equipement" translatable="false">Rechercher un équipement</string>
    <string name="detailAucuneDonnees" translatable="false">Aucune donnée accessible</string>
    <string name="infoAucuneDonnees" translatable="false">Pas de connexion Internet ! \n Aucune donnée téléchargée et accessible.</string>
    <string name="sports" translatable="false">Liste des sports</string>
    <string name="pasAssocDiscipline" translatable="false">Aucune association pour cette discipline</string>
    <string name="recherche_actu" translatable="false">Rechercher une actualite</string>
    <string name="recherche_event" translatable="false">Rechercher un événement</string>
    <string name="pasAssocActualite" translatable="false">Aucune association liée à cet équipement.</string>
    <string name="txt_geo_load" translatable="false">Recherche ...</string>
    <string name="btn_go" translatable="false">GO !</string>
    <string name="txt_tuto" translatable="false">Tuto</string>
    <string name="msg_bienvenue" translatable="false">Bienvenue sur l\'application de l\'OMS</string>
    <string name="msg_tuto_menu" translatable="false">Utilisez le menu à gauche pour naviguer</string>
    <string name="btn_tuto_ok" translatable="false">OK</string>
    <string name="detail_server_short" translatable="false">Serveur en maintenance</string>
    <string name="detail_server_long" translatable="false">Serveur en maintenance. La dernière mise à jour n\'as pas pu être installé.</string>
    <string name="option_parametre" translatable="false">Paramètres</string>
    <string name="option_guide" translatable="false">Guide des sports</string>
    <string name="option_mentions" translatable="false">Mentions légales</string>
    <string name="title_activity_mentions" translatable="false">MentionsActivity</string>
    <string name="title_activity_parametres" translatable="false">Paramètres</string>
    <string name="maj_auto" translatable="false">Activer la mise à jour automatique</string>
    <string name="faire_maj" translatable="false">Effectuer mise à jour</string>
    <string name="necessite_redem" translatable="false">(Nécessite le redémarrage de l\'application)</string>
    <string name="autres_underline" translatable="false"><u>Autres</u></string>
    <string name="autres" translatable="false">Autres</string>
    <string name="parametres" translatable="false">Paramètres</string>
    <string name="Guide_Sport" translatable="false">Guide des sports</string>
    <string name="mentions" translatable="false">Mentions légales</string>
    <string name="conditions" translatable="false">1- Conditions Générales d\'utilisation</string>
    <string name="info_editeur" translatable="false">2- Informations éditeur</string>
    <string name="info_technique" translatable="false">3- Informations techniques</string>
    <string name="info_juridique" translatable="false">4- Informations juridiques</string>

</resources>
