<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.oms.activities.MainActivity" >

    <item
        android:id="@+id/go_site"
        android:showAsAction="withText|ifRoom"
        android:icon="@drawable/ic_launcher"
        android:title="@string/action_example"/>
    <item
        android:id="@+id/parametres"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/option_parametre"/>
    
    <item
        android:id="@+id/guide_oms"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/option_guide"/>
    
      <item
        android:id="@+id/mentions"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/option_mentions"/>
      
</menu>
