<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@color/Blanc"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imagePageAccueil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/oms_logo"
            android:contentDescription="@string/info_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/annuaire"
                style="@style/btnStyleGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:onClick="onLaunchAnnuaire"
                android:text="@string/annuaire"
                android:textSize="20sp" />

            <Button
                android:id="@+id/actualite"
                style="@style/btnStyleBlue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:onClick="onLaunchActu"
                android:text="@string/agenda"
                android:textSize="20sp" />

            <Button
                android:id="@+id/maPosition"
                style="@style/btnStyleYellow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:onClick="onLaunchMaPosition"
                android:text="@string/ma_position"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:background="#88666666" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/flechetuto" />

        <Button
            android:id="@+id/buttontuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="54dp"
            android:background="@drawable/ab_solid_bleu_oms"
            android:text="@string/btn_tuto_ok"
            android:textColor="@color/Blanc"
            android:textColorHint="@color/Blanc" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/msg_tuto_menu"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold|normal" />

    </RelativeLayout>

</FrameLayout>