<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blanc" >
    
    <TextView 
        android:id="@+id/titreAutresInfos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titre_info"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:color="@color/BleuFonce1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal|center_vertical">
        
        <TextView 
            android:id="@+id/lienGuideSport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_sport"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textColor="@color/Bleu2"
            android:onClick="onGuideSport"
			android:clickable="true"/>
        
        <TextView 
            android:id="@+id/lienPlanOMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan_oms"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="30dp"
            android:textColor="@color/Bleu2"
            android:onClick="onPlanOMS"
			android:clickable="true"/>
	    
    </LinearLayout>


</FrameLayout>
