<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/nomEquipement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/arrow_l_equip"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:alpha="0.70"
            android:src="@drawable/arrow_l_green" />

        <ImageView
            android:id="@+id/arrow_r_equip"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:alpha="0.70"
            android:src="@drawable/arrow_r_green" />
    </FrameLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.1"
        android:background="@color/VertOms"
        android:text="@string/telephone"
        android:textColor="@color/NoirOms" />

    <TextView
        android:id="@+id/telFixEquipement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:textColor="@color/NoirOms"
        android:textSize="18sp" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.1"
        android:background="@color/BleuOms"
        android:text="@string/location"
        android:textColor="@color/NoirOms" />

    <TextView
        android:id="@+id/adresse"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:textColor="@color/NoirOms"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/codePostal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:textColor="@color/NoirOms"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/ville"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:textColor="@color/NoirOms"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/quartier"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:textColor="@color/NoirOms"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_map"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_geoloc"
        android:gravity="center" />

    <TextView
        android:id="@+id/lesAssociations"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.1"
        android:background="@color/OrangeOms"
        android:text="@string/associationPratiquantes"
        android:textColor="@color/NoirOms"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtPasAssoc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:text="@string/pasAssocEquipement"
        android:textColor="@color/NoirOms"
        android:textSize="10sp" />

</LinearLayout>